# rebound

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  anon.sh  anon_and_pack.sh  autoenv.cabal  bencheval.sh  docs  rebound.cabal  stack.yaml
benchmark/: Makefile  README.md  bencheval.sh  bencheval.sh~  bencheval_phantom.sh  lambda-n-ways.cabal  mergecsvs.py  stack.yaml
benchmark-rebound/: lambda-n-ways.cabal
benchmark-rebound/lib/: Suite.hs
benchmark-rebound/lib/DeBruijn/: Nested.hs
benchmark-rebound/lib/NBE/: KovacsScoped.hs
benchmark-rebound/lib/Unbound/: UnboundGenerics.hs  UnboundNonGenerics.hs  UnboundNonGenericsV.hs
benchmark/lib/: Suite.hs
benchmark/lib/DeBruijn/: Bound.hs  BoundV.hs  NestedV.hs
benchmark/lib/Named/: FoilV.hs  FreeFoil.hs
benchmark/lib/Unbound/: Gen.hs  GenV.hs  NonGen.hs  NonGenV.hs  UnboundGenerics.hs  UnboundGenericsV.hs  UnboundNonGenerics.hs  UnboundNonGenericsV.hs
benchmark/lib/Util/: Perm.hs
benchmark/results/: all_results.xlsx
benchmark/results/ablate/: eval_auto_lazy.xlsx
examples/: DepMatch.hs  LC.hs  LCLet.hs  NBE.hs  PTS.hs  Pat.hs  PiForall.hs  ScopeCheck.hs  SystemF.hs  Tutorial.lhs
examples/PiForall/: Arbitrary.hs  ConcreteSyntax.hs  Environment.hs  Equal.hs  LayoutToken.hs  Modules.hs  Parser.hs  PrettyPrint.hs  ScopeCheck.hs  Syntax.hs  TypeCheck.hs
examples/pi/: Example.pi  Fin.pi  Lec1.pi  Lec2.pi  Lec3.pi  Lec4.pi  List.pi  Nat.pi  Vec.pi
lib/Named/: Foil.hs
piforall/: README.md  pi-forall.cabal  stack.yaml
piforall/benchmarks/: Main.hs  auto-n-ways.sh
piforall/pi/examples/: AVL.pi  AVL_F.pi  Compiler.pi  Fix.pi  Lennart.pi  Regex.pi  cCompiler.pi  cLennart.pi
piforall/pi/std/: BoolLib.pi  Equal.pi  Equality.pi  Fin.pi  HList.pi  List.pi  Logic.pi  Nat.pi  Nats.pi  Option.pi  Product.pi  Sigma.pi  Sumbool.pi  Vec.pi
piforall/src/PiForall/: Arbitrary.hs  ConcreteSyntax.hs  LayoutToken.hs  Log.hs  Modules.hs  Parser.hs  PrettyPrint.hs
piforall/src/PiForall/Rebound/: Environment.hs  Equal.hs  Modules.hs  ScopeCheck.hs  Syntax.hs  TypeCheck.hs
piforall/src/PiForall/Unbound/: Environment.hs  Equal.hs  Modules.hs  NameResolution.hs  Syntax.hs  TypeCheck.hs
piforall/test/: Main.hs  ParseResolveRT.hs  ParseScopeRT.hs
piforall/test/base/: ConstructorEvidence.pi  Fail.pi
piforall/test/reproducers/: Bug1.pi  Bug2.pi
rebound/: ChangeLog.md  README.md  TODO.md  cabal.project  hlint.yaml  rebound.cabal  stack.yaml
rebound/examples/: Bang.hs  DepMatch.hs  FreeBound.hs  HOAS.hs  LC.hs  LCLet.hs  LCQC.hs  LinLC.hs  NBE.hs  PTS.hs  Pat.hs  PatGen.hs  PureSystemF.hs  ScopeCheck.hs  SystemF.hs
rebound/old/: CBPV.hs  Gen.hs  Typecheck.hs
rebound/src/: Rebound.hs
rebound/src/Data/: Fin.hs  IsListOps.hs  LocalName.hs  SNat.hs  Vec.hs
rebound/src/Data/Scoped/: Classes.hs  List.hs  Maybe.hs  Telescope.hs
rebound/src/Rebound/: Classes.hs  Context.hs  Env.hs  Generics.hs  Lib.hs  MonadNamed.hs  MonadScoped.hs  Refinement.hs
rebound/src/Rebound/Bind/: Local.hs  Pat.hs  PatN.hs  Scoped.hs  Single.hs
rebound/src/Rebound/Env/: Functional.hs  Internal.hs  InternalA.hs  InternalB.hs  InternalLazy.hs  InternalStrict.hs  Lazy.hs  LazyA.hs  LazyB.hs  List.hs  ShiftList.hs  SkewedList.hs  Strict.hs  StrictA.hs  StrictB.hs  Vector.hs
rebound/test/: All.hs  TutorialTests.hs  Utils.hs
rebound/test/Examples/: DepMatch.hs  LC.hs  LCLet.hs  LinLC.hs  PTS.hs  Pat.hs  PureSystemF.hs  SystemF.hs
rebound/tutorial/: Lecture1.md  Lecture2.md  Lecture3.md  Lecture4.md  README.md
rebound/tutorial/Tutorial/: Lib.hs  Test.hs
rebound/tutorial/Tutorial/Named/: Gen.hs  PP.hs  Parser.hs  Syntax.hs
rebound/tutorial/Tutorial/Scoped/: CPS.hs  Eval.hs  Gen.hs  ScopeCheck.hs  Scratch.hs  Syntax.hs  TestEval.hs  Typecheck.hs
rebound/tutorial/Tutorial/Simple/: CPS.hs  Eval.hs  Gen.hs  ScopeCheck.hs  Scratch.hs  Syntax.hs  TestEval.hs  Typecheck.hs
src/: AutoEnv.hs  Fin.hs  LC.hs  Lib.hs  Nat.hs  Rebound.hs  Subst.hs  Vec.hs
src/AutoEnv/: Bind.hs  Classes.hs  Context.hs  DependentScope.hs  Env.hs  Lib.hs  LocalName.hs  MonadNamed.hs  MonadScoped.hs  Pat.hs  Scope.hs  Scoped.hs
src/Data/: Fin.hs  FinAux.hs  Nat.hs  SNat.hs  Vec.hs
src/Rebound/: Classes.hs  Env.hs  Lib.hs  MonadNamed.hs  MonadScoped.hs  Scope.hs  Scoped.hs
tutorial/: README.md  cabal.project  tutorial.cabal
tutorial/docs/: Makefile  index.html  lecture1.html  lecture2.html  lecture3.html  lecture4.html  style.css  template.html
tutorial/docs/haddock/: Tutorial-Lib.html  Tutorial-Named-PP.html  Tutorial-Named-Parser.html  Tutorial-Named-Syntax.html  Tutorial-Scoped-CPS.html  Tutorial-Scoped-Eval.html  Tutorial-Scoped-Gen.html  Tutorial-Scoped-ScopeCheck.html  Tutorial-Scoped-Scratch.html  Tutorial-Scoped-Syntax.html  Tutorial-Scoped-TestEval.html  doc-index-126.html  doc-index-43.html  doc-index-46.html  doc-index-58.html  doc-index-61.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Z.html  (+3 more)
tutorial/docs/haddock/lectures/: Lecture4.md
tutorial/lectures/: Lecture1.md  Lecture2.md  Lecture3.md  Lecture4.md  Lecture5.md
tutorial/main/: Makefile  cabal.project  rebound-tutorial.cabal  stack.yaml  tutorial.cabal
tutorial/main/src/Tutorial/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Lib.hs  Top.hs
tutorial/main/src/Tutorial/Named/: PP.hs  Parser.hs  Syntax.hs
tutorial/main/src/Tutorial/Scoped/: CPS.hs  Eval.hs  Gen.hs  ScopeCheck.hs  Scratch.hs  Solutions.hs  Syntax.hs  SyntaxScratch.hs
tutorial/main/test/: Main.hs
tutorial/src/Tutorial/Named/: PP.hs  Syntax.hs
tutorial/src/Tutorial/Scoped/: CPS.hs  Eval.hs  Gen.hs  ScopeCheck.hs  Syntax.hs
tutorial/src/Tutorial/Scoped/Eval/: Test.hs
tutorial/test/: Main.hs  TutorialTests.hs
(+172 files in other folders)
