cabal-version:  2.2
name:           autoenv
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/project-cis5520#readme>
homepage:       https://github.com/githubuser/project-cis5520#readme
bug-reports:    https://github.com/githubuser/project-cis5520/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

common common-stanza
  ghc-options:         
     -Wno-type-defaults 
     -fwarn-incomplete-patterns
  build-depends:
      base >=4.15
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , parsec
    , prettyprinter
    , network
    , directory
    , random
    , mtl
    , brick
    , vty
  default-language:
    GHC2021
  default-extensions:
    KindSignatures
    , DataKinds
    , GADTs
    , StandaloneDeriving
    , LambdaCase
    , QuantifiedConstraints
    , TypeFamilies
    , AllowAmbiguousTypes
    , UndecidableInstances

library
  import:
      common-stanza
  exposed-modules:
        AutoEnv
      , AutoEnv.Classes
      , AutoEnv.Context
      , AutoEnv.Lib
      , AutoEnv.Env
      , AutoEnv.Bind
      , AutoEnv.Pat
      , AutoEnv.Pat.PatN
      , AutoEnv.Pat.Rebind
      , Data.Nat
      , Data.Fin
      , Data.Vec
      , LC
      , LCLet
      , PTS
      , Pat
      , DepMatch
      , PiForall.Syntax
      , PiForall.Environment
  hs-source-dirs:
      src
      , examples



