cabal-version:  2.2
name:           autoenv
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/project-cis5520#readme>
homepage:       https://github.com/githubuser/project-cis5520#readme
bug-reports:    https://github.com/githubuser/project-cis5520/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

common common-stanza
  ghc-options:         
     -Wno-type-defaults 
     -fwarn-incomplete-patterns
  build-depends:
      base >=4.15
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , parsec
    , prettyprinter
    , network
    , directory
    , random
    , mtl
    , brick
    , vty
  default-language:
    GHC2021
  default-extensions:
    KindSignatures
    , DataKinds
    , GADTs
    , StandaloneDeriving
    , LambdaCase
    , QuantifiedConstraints
    , TypeFamilies
    , AllowAmbiguousTypes
    , UndecidableInstances

library
  import:
      common-stanza
  exposed-modules:
        AutoEnv
      , AutoEnv.Classes
      , AutoEnv.Context
      , AutoEnv.Lib
      , AutoEnv.Env
      , AutoEnv.MonadScoped
      , AutoEnv.Bind.Single
      , AutoEnv.Bind.Local
      , AutoEnv.Bind.PatN
      , AutoEnv.Bind.Pat
      , AutoEnv.Bind.Scoped
      , Data.Nat
      , Data.Fin
      , Data.Vec
      , Data.LocalName    
      , Data.Scoped.List  
      , LC
      , LCLet
      , PTS
      , Pat
      , DepMatch
      , PiForall.Arbitrary
      , PiForall.Syntax
      , PiForall.ConcreteSyntax
      , PiForall.Environment
      , PiForall.Equal
      , PiForall.PrettyPrint
      , PiForall.LayoutToken
      , PiForall.Parser
      , PiForall.ScopeCheck
      , PiForall.Modules
      , PiForall.TypeCheck
  hs-source-dirs:
      src
      , examples



