cabal-version:  2.2
name:           rebound
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/project-cis5520#readme>
homepage:       https://github.com/githubuser/project-cis5520#readme
bug-reports:    https://github.com/githubuser/project-cis5520/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

common common-stanza
  ghc-options:         
     -Wno-type-defaults 
     -fwarn-incomplete-patterns
  build-depends:
      base >=4.15
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , parsec
    , prettyprinter
    , network
    , directory
    , random
    , mtl
    , brick
    , vty
    , deepseq
  default-language:
    GHC2021
  default-extensions:
    KindSignatures
    , DataKinds
    , GADTs
    , StandaloneDeriving
    , LambdaCase
    , QuantifiedConstraints
    , TypeFamilies
    , AllowAmbiguousTypes
    , UndecidableInstances
    , FunctionalDependencies
    , ViewPatterns
    

library
  import:
      common-stanza
  exposed-modules:
        Rebound
      , Rebound.Classes
      , Rebound.Context
      , Rebound.Lib
      , Rebound.Env
      , Rebound.Env.Internal
      , Rebound.Env.InternalStrict
      , Rebound.Env.InternalLazy
      , Rebound.Env.InternalA
      , Rebound.Env.InternalB
      , Rebound.Env.Functional
      , Rebound.Env.Vector
      , Rebound.MonadScoped
      , Rebound.Bind.Single
      , Rebound.Bind.Local
      , Rebound.Bind.PatN
      , Rebound.Bind.Pat
      , Rebound.Bind.Scoped
      , Data.SNat
      , Data.Fin
      , Data.Vec
      , Data.LocalName    
      , Data.Scoped.List  
      , LC
      , LCLet
      , PTS
--      , Pat
--      , DepMatch
--      , NBE
      , ScopeCheck
  hs-source-dirs:
      src
      , examples



