cabal-version:  2.2
name:           rebound
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sweirich/rebound>
homepage:       https://github.com/sweirich/rebound
bug-reports:    https://github.com/sweirich/rebound/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

common common-stanza
  ghc-options:
     -Wno-type-defaults
     -fwarn-incomplete-patterns
  default-language:
    GHC2021
  default-extensions:
    KindSignatures
    , DataKinds
    , GADTs
    , StandaloneDeriving
    , LambdaCase
    , QuantifiedConstraints
    , TypeFamilies
    , AllowAmbiguousTypes
    , UndecidableInstances
    , FunctionalDependencies
    , ViewPatterns


library
  import:
      common-stanza
  build-depends:
      base >=4.15
    , containers
    , mtl
    , QuickCheck
    , fin >= 0.3
    , vec
    , mono-traversable
  exposed-modules:
      Rebound
    , Rebound.Classes
    , Rebound.Context
    , Rebound.Lib
    , Rebound.Env
    , Rebound.Env.Internal
    , Rebound.Env.InternalStrict
    , Rebound.Env.InternalLazy
    , Rebound.Env.InternalA
    , Rebound.Env.InternalB
    , Rebound.Env.Functional
    , Rebound.Env.Vector
    , Rebound.MonadNamed
    , Rebound.MonadScoped
    , Rebound.Bind.Single
    , Rebound.Bind.Local
    , Rebound.Bind.PatN
    , Rebound.Bind.Pat
    , Rebound.Bind.Scoped
    , Data.SNat
    , Data.Fin
    , Data.Vec
    , Data.LocalName
    , Data.Scoped.Const
    , Data.Scoped.List
    , Data.Scoped.Maybe
    , Data.Scoped.Telescope
  hs-source-dirs: src

library rebound-examples
  import:
    common-stanza
  build-depends:
    base >=4.15
    , rebound
    , mtl
    , HUnit
    , QuickCheck
    , filepath
    , parsec
    , prettyprinter
    , containers
    , network
    , directory
    , random
    , mtl
  exposed-modules:
      LC
    , LCLet
    , PTS
    , Pat
    , DepMatch
    , NBE
    , SystemF
  hs-source-dirs: examples
