cabal-version:  3.0
name:           rebound
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sweirich/rebound>
homepage:       https://github.com/sweirich/rebound
bug-reports:    https://github.com/sweirich/rebound/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

common common-stanza
  ghc-options:
     -Wno-type-defaults
     -Wincomplete-patterns
  default-language:
    GHC2021
  default-extensions:
    KindSignatures
    , DataKinds
    , GADTs
    , StandaloneDeriving
    , LambdaCase
    , QuantifiedConstraints
    , TypeFamilies
    , AllowAmbiguousTypes
    , UndecidableInstances
    , FunctionalDependencies
    , ViewPatterns
    , PatternSynonyms
    , PackageImports
    , DerivingStrategies
library
  import:
      common-stanza
  build-depends:
      base >=4.15
    , containers
    , mtl
    , QuickCheck
    , fin >= 0.3
    , vec
    , prettyprinter
    , deepseq
  exposed-modules:
      Rebound
    , Rebound.Classes
    , Rebound.Context
    , Rebound.Env
    , Rebound.Env.Vector
    , Rebound.Env.Functional
    , Rebound.Generics
    , Rebound.Lib
    , Rebound.MonadNamed
    , Rebound.MonadScoped
    , Rebound.Bind.Single
    , Rebound.Bind.Local
    , Rebound.Bind.PatN
    , Rebound.Bind.Pat
    , Rebound.Refinement
    , Data.SNat
    , Data.Fin
    , Data.Vec
    , Data.LocalName
    , Data.Scoped.List
    , Data.Scoped.Classes
    , Data.Scoped.Maybe
  hs-source-dirs: src

test-suite rebound-tests
  import:
    common-stanza
  build-depends:
      base
    , rebound
    , rebound-examples
    , tasty
    , tasty-hunit
    , tasty-quickcheck
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    All.hs
  other-modules:
    Utils
    Examples.LC
    Examples.LCLet
    Examples.Pat
    Examples.PureSystemF
    Examples.PTS
    Examples.DepMatch
    Examples.LinLC