cabal-version:  3.0
name:           rebound-tutorial
version:        0.1.0.0
description:    Tutorial code for "Implement your POPL paper (in Haskell)"
homepage:       https://github.com/sweirich/rebound/tutorial
bug-reports:    https://github.com/sweirich/rebound/issues
author:         Stephanie Weirich
maintainer:     sweirich@seas.upenn.edu
copyright:      2026 Stephanie Weirich
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-doc-files:
    README.md
    lectures/Lecture1.md
    lectures/Lecture2.md
    lectures/Lecture3.md
    lectures/Lecture4.md
category:       Language

common common-stanza
  ghc-options:
     -Wno-type-defaults
     -Wincomplete-patterns
     -Wno-deprecations
  default-language:
    GHC2021
  default-extensions:
    KindSignatures
    , DataKinds
    , GADTs
    , StandaloneDeriving
    , LambdaCase
    , QuantifiedConstraints
    , TypeFamilies
    , AllowAmbiguousTypes
    , UndecidableInstances
    , FunctionalDependencies
    , ViewPatterns
    , PatternSynonyms
    , PackageImports
    , DerivingStrategies

library
  import:
    common-stanza
  build-depends:
      base >= 4.15 && < 5.0
    , rebound >= 0.1
    , mtl
    , HUnit
    , QuickCheck >= 2.14.3 && < 2.15
    , containers
    , prettyprinter
    , parsec
    , template-haskell
    , syb
  exposed-modules:
    , Tutorial.Named.Syntax
    , Tutorial.Named.PP
    , Tutorial.Named.Parser
    , Tutorial.Scoped.Syntax
    , Tutorial.Scoped.Gen
    , Tutorial.Scoped.Eval
    , Tutorial.Scoped.ScopeCheck
    , Tutorial.Scoped.Scratch
    , Tutorial.Scoped.CPS
    , Tutorial.Top
    , Tutorial.Exercise1
    , Tutorial.Exercise3
  hs-source-dirs: src

test-suite tutorial-tests
  import:
    common-stanza
  build-depends:
      base
    , rebound-tutorial
    , QuickCheck
    , tasty
    , tasty-quickcheck
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
